# SFML-Multiplayer-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: client.cpp  client.h  server.cpp  server.h  settings.h
src/game/: player.cpp  player.h  projectile.cpp  projectile.h  world.cpp  world.h
